Fixes formatting on log in page rough draft

--- a/FrontEnd/StartLogin.html
+++ b/FrontEnd/StartLogin.html
@@ -10,8 +10,8 @@
                 <label for="username">Username:</label><br>
                 <input type="text" id="username"><br>
 
-                <label for="pswd">Password:</label>
-                <input type="password" id="pswd">
+                <label for="pswd">Password:</label><br>
+                <input type="password" id="pswd"><br>
 
                 <input type="button" value="Log In" onclick="checkCredentials()">
 
