Add more front end pages

--- a/FrontEnd/SettingsPage.html
+++ b/FrontEnd/SettingsPage.html
@@ -50,6 +50,8 @@
                     <input type="text"></input>
                     <br>
 
+                    <!--Dropdown box for res halls-->
+
                     <label id="roomNumer">Your Room Number</label>
                     <input type="text"></input>
                     <br>
