--- a/FrontEnd/MainMenu.html
+++ b/FrontEnd/MainMenu.html
@@ -38,7 +38,7 @@
                 <div id="menu">
                     <img src="logoTransparent.png" alt="WOLetu" >
                     <br>
-                    <label id="usernameLabel">Test</label>
+                    <label id="usernameLabel">User: Allison Hilbig</label>
                     <button onclick="changeSettings()">Update Default Settings</button>
                     <button onclick="createWorkOrder()">Create a Work Order</button>
                     <button onclick="loadUser()">Log Off</button>
