Pushing front end for the night
still need to get stupid buttons working...

--- a/FrontEnd/html/SettingsPage.html
+++ b/FrontEnd/html/SettingsPage.html
@@ -1,43 +1,12 @@
 <html>
         <head>
-            <script type="text/javascript" src = "SettingsPage.js"></script>
+            <script 
+                type="text/javascript" 
+                src="SettingsPage.js"
+                window.location.href="cs-lab.letu.edu/~sw2proj/SettingPage.html"
+            ></script>
             
-            <style>
-                body {
-                    background-color: lightblue;
-                }
-
-                button {
-                    text-align: center;
-                    width: 100%;
-                    max-width: 300px;
-                    height: auto;
-                    display: block;
-                    padding: 10px 0;
-                    margin: 20px auto;
-                }
-                label {
-                    font-size: 16px;
-                    font-family: Helvetica;
-                }
-                div {
-                    text-align: center;
-                    padding: 10px;
-                    margin: 20px auto;
-                }
-                img {
-                    max-width: 214;
-                    max-height: 170;
-                }
-                input {
-                    text-align: left;
-                    width: 100%;
-                    max-width: 300px;
-                    height:  auto;
-                    display: block;
-                    padding: 10px;
-                    margin: 10px auto;
-                }
+            <link rel="stylesheet" href="css/MenuStyle.css">
             </style>
         </head>
 
