--- a/FrontEnd/html/CreateUser.html
+++ b/FrontEnd/html/CreateUser.html
@@ -7,13 +7,13 @@
                 window.location.href="cs-lab.letu.edu/~sw2proj/CreateUser.html"
             ></script>
 
-            <link rel="stylesheet" href="css/StandardStyle.css">
+            <link rel="stylesheet" href="../css/StandardStyle.css">
         </head>
     
         <body>
             <form name ="createUser">
                 <div id="logo">
-                    <img src="logoTransparent.png" alt="WOLetu">
+                    <img src="../../Images/logoTransparent.png" alt="WOLetu">
                 </div>
                                  
                 <div id="credentials">
