--- a/FrontEnd/html/MainMenu.html
+++ b/FrontEnd/html/MainMenu.html
@@ -6,13 +6,13 @@
                 window.location.href="cs-lab.letu.edu/~sw2proj/MainMenu.html"
             ></script>
             
-            <link rel="stylesheet" href="css/MenuStyle.css">
+            <link rel="stylesheet" href="../css/MenuStyle.css">
         </head>
 
         <body>
             <form name ="mainMenu" onloadeddata="loadUser()">
                 <div id="menu">
-                    <img src="logoTransparent.png" alt="WOLetu" >
+                    <img src="../../Images/logoTransparent.png" alt="WOLetu">
                     <br>
                     <label id="usernameLabel">User: Allison Hilbig</label>
                     <button onclick="changeSettings()">Update Default Settings</button>
