--- a/FrontEnd/html/SettingsPage.html
+++ b/FrontEnd/html/SettingsPage.html
@@ -6,14 +6,14 @@
                 window.location.href="cs-lab.letu.edu/~sw2proj/SettingPage.html"
             ></script>
             
-            <link rel="stylesheet" href="css/MenuStyle.css">
+            <link rel="stylesheet" href="../css/MenuStyle.css">
             </style>
         </head>
 
         <body>
             <form name ="updateSettings" onloadeddata="loadUser()">
                 <div id="settings">
-                    <img src="logoTransparent.png" alt="WOLetu" >
+                    <img src="../../Images/logoTransparent.png" alt="WOLetu">
                     <br>
                     <label id="userEmail">Your Email Address</label>
                     <input type="text"></input>
