--- a/FrontEnd/html/WorkOrder1.html
+++ b/FrontEnd/html/WorkOrder1.html
@@ -6,7 +6,7 @@
             window.location.href="cs-lab.letu.edu/~sw2proj/WorkOrder1.html"
         ></script>
         
-        <link rel="stylesheet" href="css/StandardStyle.css">   
+        <link rel="stylesheet" href="../css/StandardStyle.css">   
         </style>
     </head>
 
