--- a/FrontEnd/html/WorkOrder2.html
+++ b/FrontEnd/html/WorkOrder2.html
@@ -8,7 +8,7 @@
 
         <meta charset="utf-8">
 
-        <link rel="stylesheet" href="css/StandardStyle.css">
+        <link rel="stylesheet" href="../css/StandardStyle.css">
     </head>
 
     <body>
