--- a/FrontEnd/html/StartLogin.html
+++ b/FrontEnd/html/StartLogin.html
@@ -5,18 +5,20 @@
             type="text/javascript" 
             src="StartLogin.js"
         ></script>
-        <link rel="stylesheet" href="css/StandardStyle.css">
+        <link rel="stylesheet" href="../css/StandardStyle.css">
     </head>
 
     <body>
         <form name ="startLogin">
             <div id="logo">
-                <img src="logoTransparent.png" alt="WOLetu">
+                <img src="../../Images/logoTransparent.png" alt="WOLetu">
                 <br>
                 <label for="logo">Welcome to Work Order LETU!</label>
             </div>
-            <button onclick="createUser()">Create WOL Account</button>
-            
+            <form action="http://reddit.com">
+                <input type="submit" value="Create WOL Account">
+            </form>
+
             <div id="credentials">
                 <label for="username">Username:</label><br>
                 <input type="text" id="username"><br>
@@ -25,8 +27,9 @@
                 <input type="password" id="pswd"><br>
             </div>                
         </form>
-
-        <button type="button">Log In</button>
+        <form action="C:\Users\Allison\Documents\_College\_7 Semester\Software Engineering II\WorkOrderLETU\FrontEnd\html\MainMenu.html">
+            <input type="submit" value="Log In">
+        </form>
     </body>
 
     </html>
