--- a/public_html/html/StartLogin.html
+++ b/public_html/html/StartLogin.html
@@ -3,31 +3,32 @@
         <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
         <script 
             type="text/javascript" 
-            src="StartLogin.js"
+            src="../FrontEnd/scripts/StartLogin.js"
         ></script>
-        <link rel="stylesheet" href="../css/StandardStyle.css">
+        <link rel="stylesheet" href="../FrontEnd/css/StandardStyle.css">
     </head>
 
     <body>
-        <form name ="startLogin">
+        <form>
             <div id="logo">
-                <img src="../../Images/logoTransparent.png" alt="WOLetu">
+                <img src="../Images/logoTransparent.png" alt="WOLetu">
                 <br>
                 <label for="logo">Welcome to Work Order LETU!</label>
             </div>
-            <form action="http://reddit.com">
-                <input type="submit" value="Create WOL Account">
-            </form>
-
+        </form>
+        <form action="http://cs-lab.letu.edu/~sw2proj/CreateUser.html">
+            <input type="submit" value="Create WOL Account">
+        </form>
+        <form>
             <div id="credentials">
                 <label for="username">Username:</label><br>
                 <input type="text" id="username"><br>
 
                 <label for="pswd">Password:</label><br>
                 <input type="password" id="pswd"><br>
-            </div>                
+            </div>
         </form>
-        <form action="C:\Users\Allison\Documents\_College\_7 Semester\Software Engineering II\WorkOrderLETU\FrontEnd\html\MainMenu.html">
+        <form>
             <input type="submit" value="Log In">
         </form>
     </body>
