--- a/public_html/html/WorkOrder1.html
+++ b/public_html/html/WorkOrder1.html
@@ -2,11 +2,11 @@
     <head>
         <script 
             type="text/javascript" 
-            src="WorkOrder1.js" 
+            src="../FrontEnd/scripts/WorkOrder1.js" 
             window.location.href="cs-lab.letu.edu/~sw2proj/WorkOrder1.html"
         ></script>
         
-        <link rel="stylesheet" href="../css/StandardStyle.css">   
+        <link rel="stylesheet" href="../FrontEnd/css/StandardStyle.css">   
         </style>
     </head>
 
@@ -22,8 +22,11 @@
                 <input type="radio" name="location" value="inHall">This issue is in my res hall<br>
                 <input type="radio" name="location" value="outside">This issue is outside<br>
 
-                <button onclick="nextWOPage()">Next Page</button>
+
             </div>
+        </form> 
+        <form action="http://cs-lab.letu.edu/~sw2proj/WorkOrder2.html">
+            <input type="submit" value="Next Page">
         </form>
     </body>
 
