--- a/public_html/html/MainMenu.html
+++ b/public_html/html/MainMenu.html
@@ -3,7 +3,6 @@
             <script 
                 type="text/javascript" 
                 src = "../FrontEnd/scripts/MainMenu.js"
-                window.location.href="cs-lab.letu.edu/~sw2proj/MainMenu.html"
             ></script>
             
             <link rel="stylesheet" href="../FrontEnd/css/MenuStyle.css">
@@ -17,13 +16,13 @@
                     <label id="usernameLabel">User: Allison Hilbig</label>
                 </div>
             </form>
-            <form action="http://cs-lab.letu.edu/~sw2proj/SettingsPage.html">
+            <form action="http://cs-lab.letu.edu/~sw2proj/html/SettingsPage.html">
                 <input type="submit" value="Update Default Settings">
             </form>
-            <form action="http://cs-lab.letu.edu/~sw2proj/WorkOrder1.html">
+            <form action="http://cs-lab.letu.edu/~sw2proj/html/WorkOrder1.html">
                 <input type="submit" value="Create a Work Order">
             </form>       
-            <form action="http://cs-lab.letu.edu/~sw2proj/StartLogin.html">
+            <form action="http://cs-lab.letu.edu/~sw2proj/html/StartLogin.html">
                 <input type="submit" value="Log Off">
             </form>
         </body>
