--- a/public_html/html/StartLogin.html
+++ b/public_html/html/StartLogin.html
@@ -16,7 +16,7 @@
                 <label for="logo">Welcome to Work Order LETU!</label>
             </div>
         </form>
-        <form action="http://cs-lab.letu.edu/~sw2proj/CreateUser.html">
+        <form action="http://cs-lab.letu.edu/~sw2proj/html/CreateUser.html">
             <input type="submit" value="Create WOL Account">
         </form>
         <form>
