--- a/public_html/html/WorkOrder2.html
+++ b/public_html/html/WorkOrder2.html
@@ -14,20 +14,15 @@
     <body>
         <form name ="workOrder2" onloadeddata="displayFields()">
             <div id="workOrderData">
-
                 <label id="issue">Briefly describe issue, and the location using cardinal (N,E,S,W) directions:</label>
                 <input type="text" name="issue" maxlength="100">
                 <br>
-                <a href="WorkOrder1.html" class="btn btn-default" role="button">Sign up</a>
-
-                <button type="submit" class="btn btn-default">Submit</button>
                 <label id="issue">Add photo if helpful (optional):</label>
                 <input id="image-file" type="file">
-                <br>
-                
+                <br> 
             </div>
         </form>
-        <form onclick="alert('Completed')" action="http://cs-lab.letu.edu/~sw2proj/MainMenu.html">
+        <form onclick="alert('Completed')" action="http://cs-lab.letu.edu/~sw2proj/html/MainMenu.html">
             <input type="submit" value="Submit to your RA">
         </form>
     </body>
